--- a/NanoChallenge-MyFirstApp/StartScreen/Views/NanoChallenge-MyFirstApp/Base.lproj/StartScreen.storyboard
+++ b/NanoChallenge-MyFirstApp/StartScreen/Views/NanoChallenge-MyFirstApp/Base.lproj/StartScreen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,30 +17,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainScreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Y1s-Kc-fbk">
-                                <rect key="frame" x="64" y="76" width="286" height="286"/>
+                                <rect key="frame" x="32" y="619.5" width="350" height="98.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Y1s-Kc-fbk" secondAttribute="height" multiplier="1:1" id="3Kk-N4-qTb"/>
+                                    <constraint firstAttribute="width" secondItem="Y1s-Kc-fbk" secondAttribute="height" multiplier="32:9" id="3Kk-N4-qTb"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fMw-jM-LZp">
-                                <rect key="frame" x="64" y="714" width="286" height="48"/>
-                                <color key="backgroundColor" name="AccentColor"/>
+                                <rect key="frame" x="32" y="750" width="350" height="48"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="NWi-zP-b4X"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="fcH-IO-5XG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="AccentColor"/>
                                 <state key="normal" title=" Start" image="play.fill" catalog="system">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" name="AccentColor"/>
                                 </state>
                                 <connections>
                                     <segue destination="6Ht-SJ-hCj" kind="show" id="uZe-eh-9zh"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ntb-uj-n4h">
-                                <rect key="frame" x="64" y="778" width="286" height="20"/>
-                                <color key="tintColor" name="AccentColor"/>
-                                <state key="normal" title=" How to play" image="questionmark.circle" catalog="system"/>
+                                <rect key="frame" x="350" y="60.5" width="32" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="wa5-1S-sx2"/>
+                                    <constraint firstAttribute="height" constant="32" id="yUh-fa-pDD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" backgroundImage="questionmark.circle" catalog="system"/>
                                 <state key="selected">
                                     <color key="titleColor" name="AccentColor"/>
                                 </state>
@@ -50,17 +56,16 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="BackgroundColor"/>
+                        <color key="backgroundColor" name="AccentColor"/>
                         <constraints>
-                            <constraint firstItem="fMw-jM-LZp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="BQL-Tv-a7v"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fMw-jM-LZp" secondAttribute="trailing" constant="64" id="E11-PJ-AV4"/>
-                            <constraint firstItem="Ntb-uj-n4h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SgD-qC-4MG"/>
-                            <constraint firstItem="Ntb-uj-n4h" firstAttribute="top" secondItem="fMw-jM-LZp" secondAttribute="bottom" constant="16" id="lic-W3-CQa"/>
-                            <constraint firstItem="Y1s-Kc-fbk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="n4G-b7-rhf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ntb-uj-n4h" secondAttribute="bottom" constant="64" id="oEU-0u-Xd2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Y1s-Kc-fbk" secondAttribute="trailing" constant="64" id="pkP-zs-4dn"/>
-                            <constraint firstItem="Y1s-Kc-fbk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="qpM-fP-g2S"/>
-                            <constraint firstItem="Ntb-uj-n4h" firstAttribute="width" secondItem="fMw-jM-LZp" secondAttribute="width" id="yqc-ni-kS5"/>
+                            <constraint firstItem="Y1s-Kc-fbk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="274-iz-DaL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fMw-jM-LZp" secondAttribute="trailing" constant="32" id="Hni-fX-WlK"/>
+                            <constraint firstItem="Ntb-uj-n4h" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Hzo-qO-OZQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ntb-uj-n4h" secondAttribute="trailing" constant="32" id="Sv9-uZ-CqH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fMw-jM-LZp" secondAttribute="bottom" constant="64" id="Z5U-nP-Byt"/>
+                            <constraint firstItem="fMw-jM-LZp" firstAttribute="top" secondItem="Y1s-Kc-fbk" secondAttribute="bottom" constant="32" id="kgT-pw-uzc"/>
+                            <constraint firstItem="fMw-jM-LZp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="msV-aT-zkq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Y1s-Kc-fbk" secondAttribute="trailing" constant="32" id="n5e-gO-uuu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="mke-pd-rH5"/>
@@ -91,14 +96,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MainScreenLogo" width="582" height="582"/>
+        <image name="MainScreenLogo" width="990" height="261"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
         <namedColor name="AccentColor">
-            <color red="0.69599997997283936" green="0.460999995470047" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-        </namedColor>
-        <namedColor name="BackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color red="0.6940000057220459" green="0.32199999690055847" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
