--- a/NanoChallenge-MyFirstApp/StartScreen/Views/NanoChallenge-MyFirstApp/Base.lproj/HowToPlayScreen.storyboard
+++ b/NanoChallenge-MyFirstApp/StartScreen/Views/NanoChallenge-MyFirstApp/Base.lproj/HowToPlayScreen.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="64G-kN-NSn">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to play Typoops" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Bw-Oq-QBl">
                                                 <rect key="frame" x="32" y="54.5" width="350" height="38.5"/>
@@ -36,26 +36,36 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2021-06-02 at 22.35.11" translatesAutoresizingMaskIntoConstraints="NO" id="Saf-8g-ebu">
-                                                <rect key="frame" x="32" y="222.5" width="350" height="542"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardTutorial" translatesAutoresizingMaskIntoConstraints="NO" id="Saf-8g-ebu">
+                                                <rect key="frame" x="32" y="222.5" width="350" height="350"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Saf-8g-ebu" secondAttribute="height" multiplier="1:1" id="Qt0-Ln-lsV"/>
+                                                </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You will answer 10 questions, at the end of it you will see your results and a explanation about why is it wrong or right." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xlU-gI-Fyp">
-                                                <rect key="frame" x="32" y="780.5" width="350" height="61"/>
+                                                <rect key="frame" x="32" y="588.5" width="350" height="61"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2021-06-02 at 22.35.34" translatesAutoresizingMaskIntoConstraints="NO" id="XKn-wM-iUh">
-                                                <rect key="frame" x="32" y="857.5" width="350" height="129"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ButtonTutorial" translatesAutoresizingMaskIntoConstraints="NO" id="XKn-wM-iUh">
+                                                <rect key="frame" x="32" y="665.5" width="350" height="116.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="XKn-wM-iUh" secondAttribute="height" multiplier="3:1" id="2x5-3G-3KD"/>
+                                                </constraints>
+                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You can leave the game at any time at the X and the ? to see information abount the content asked." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXu-z5-fb4">
-                                                <rect key="frame" x="32" y="1002.5" width="350" height="61"/>
+                                                <rect key="frame" x="32" y="798" width="350" height="61"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2021-06-02 at 22.35.46" translatesAutoresizingMaskIntoConstraints="NO" id="Wwi-wu-7GL">
-                                                <rect key="frame" x="32" y="1114.5" width="350" height="66"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavigationButtonsTutorial" translatesAutoresizingMaskIntoConstraints="NO" id="Wwi-wu-7GL">
+                                                <rect key="frame" x="32" y="910" width="350" height="87.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Wwi-wu-7GL" secondAttribute="height" multiplier="4:1" id="inz-ke-Tw2"/>
+                                                </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMn-Be-wbF">
                                                 <rect key="frame" x="361" y="8" width="37" height="30"/>
@@ -92,7 +102,7 @@
                                             <constraint firstItem="XKn-wM-iUh" firstAttribute="leading" secondItem="xlU-gI-Fyp" secondAttribute="leading" id="oDC-hh-0mZ"/>
                                             <constraint firstItem="xlU-gI-Fyp" firstAttribute="top" secondItem="Saf-8g-ebu" secondAttribute="bottom" constant="16" id="p9l-YM-zIz"/>
                                             <constraint firstItem="Wwi-wu-7GL" firstAttribute="top" secondItem="cXu-z5-fb4" secondAttribute="bottom" constant="51" id="r7N-4k-CCE"/>
-                                            <constraint firstAttribute="height" constant="1500" id="vLL-6D-Wlv"/>
+                                            <constraint firstAttribute="height" constant="1200" id="vLL-6D-Wlv"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -124,9 +134,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Screen Shot 2021-06-02 at 22.35.11" width="340" height="542"/>
-        <image name="Screen Shot 2021-06-02 at 22.35.34" width="385" height="129"/>
-        <image name="Screen Shot 2021-06-02 at 22.35.46" width="385" height="66"/>
+        <image name="ButtonTutorial" width="750" height="164"/>
+        <image name="CardTutorial" width="798" height="1226"/>
+        <image name="NavigationButtonsTutorial" width="750" height="164"/>
         <namedColor name="AccentColor">
             <color red="0.6940000057220459" green="0.32199999690055847" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
