--- a/NanoChallenge-MyFirstApp/Game/Views/GameScreen.storyboard
+++ b/NanoChallenge-MyFirstApp/Game/Views/GameScreen.storyboard
@@ -76,7 +76,7 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pMt-x3-Cyn" customClass="CardView" customModule="NanoChallenge_MyFirstApp" customModuleProvider="target">
                                 <rect key="frame" x="32" y="162.66666666666669" width="364" height="527.66666666666652"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="image" keyPath="image" value="centering_C"/>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -86,7 +86,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gZA-Xj-lh9" customClass="FeedbackView" customModule="NanoChallenge_MyFirstApp" customModuleProvider="target">
                                 <rect key="frame" x="150" y="404" width="128" height="128"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" name="ShittyGreen"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="iXL-6J-8tM"/>
@@ -182,9 +182,6 @@
         <namedColor name="ShittyGreen">
             <color red="0.60399997234344482" green="0.6119999885559082" blue="0.1289999932050705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
